# c-binary-addition

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: binary_addition.c  binary_addition.h  main.c
src/char array implementation/: binary_addition.c  binary_addition.h
src/uint64_t implementation/: binary_addition.c  binary_addition.h
strings/: input1.txt  input2.txt
tests/: test_binary_addition.c
tests/test_strings/: test_large_input1.txt  test_large_input2.txt
